[tool.poetry]
name = "git-submerge"
version = "0.1.0"
description = "TUI for managing deeply nested git submodules"
authors = ["Uli Köhler"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "git_submerge.py" }]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.scripts]
git-submerge = "git_submerge:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
